switching to a non-sun Base64